# DSR-Clock

./: CMakeLists.txt  README.md  makefile  sdkconfig  sdkconfig.old
.github/workflows/: main.yml
components/Stepper/: AccelStepper.c  AccelStepper.cpp  AccelStepper.h  CMakeLists.txt  MultiStepper.c  MultiStepper.h  TMC2209.c  TMC2209.h  TMC2209_Struct.h  TMC2209_config.h
components/accelstepper/: AccelStepper.c  AccelStepper.h  CMakeLists.txt  MultiStepper.c  MultiStepper.h
components/ds3231/: CMakeLists.txt
components/i2cdev/: CMakeLists.txt
components/stepper/: stepper.c  stepper.h
components/tmc2209/: CMakeLists.txt  TMC2209.c  TMC2209.h  TMC2209_Struct.h  TMC2209_config.h
main/: CMakeLists.txt  app_Main.c  gpio_definitions.h  idf_component.yml  nvs_handler.c  nvs_handler.h  stepper_config.h  stepper_control.c  stepper_control.cpp  stepper_control.h  time_handler.c  time_handler.h  time_sync.c  time_sync.h  tz_mapping.h  util.c  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
main/include/: tz_mapping.h  util.h  wifi_manager.h
